# C64-Intelligence-SDK

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.updater  IMPLEMENTATION_SPEC_AND_GUIDE.md  INTEGRATION.md  INTEGRATION_PLAN.md  README.md  README_2.md  ROADMAP.md  asm6502.py  c64_ecosystem_analisi.md  c64c-docs.html  c64c.html  c64py_preview.html  docker-compose.override.yml  docker-compose.yml  pyc64_project.py  pyc64_ui.py  pyc64c.py  requirements.txt  run_c64.py  test_python.asm  test_python.bas  test_python.c64  test_python.prg
data/vectorstore/: docstore.pkl  index.faiss
docs/: ARCHITECTURE.md  COMPILER.md  FASE1_DETAILED_PLAN.md  FASE2_DETAILED_PLAN.md  GIT_GUIDE.md  HARDWARE_DSL.md  IMPLEMENTATION_PLAN.md  ROADMAP.md  SDK_INTEGRATION.md  SOUND_API.md  conf.py
docs/api/: README.md
examples/: graphics_test.c64  hello.asm
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
pyc64_ui/: app.py  controller.py
pyc64_ui/screens/: dashboard.py  editor.py  simulator.py  tutorial.py
pyc64c/: __init__.py  asm6502.py  ast_nodes.py  basic_gen.py  code_emitter.py  code_gen.py  compiler.py  engine.py  integration.py  lexer.py  ops.py  optimizer.py  parser.py  prg_builder.py  runtime.py  sdk.py  simulation_engine.py  token_types.py
scripts/: compile.py  compiler_agent_prototype.py  submodule-manager.py  update-submodules.sh
tests/: test_features.py  test_formats.py  test_project.py  test_sdk.py  test_services_and_pipeline.py  test_ui.py
(+12 files in other folders)
