[package]
name = "c64-intelligence-studio"
version = "1.0.0"
description = "C64 Intelligence Studio Desktop App"
authors = ["Alberto Abate"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = [ "api-all", "fs-all", "path-all", "shell-sidecar" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
